# npsolve

./: .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  requirements_optional.txt  setup.py
docs/source/: conf.py  index.rst  modules.rst  npsolve.cache.rst  npsolve.core.rst  npsolve.legacy.cache.rst  npsolve.legacy.solvers.rst  npsolve.legacy.utils.rst  npsolve.rst  npsolve.soft_functions.rst  npsolve.solvers.rst  npsolve.utils.rst  package.rst  quickstart.rst  related.rst  tutorial_1.rst  tutorial_1b.rst  tutorial_2.rst  tutorial_3.rst  tutorial_4.rst  tutorial_5.rst  tutorial_6.rst  tutorials.rst
examples/: __init__.py  tutorial_1.py  tutorial_1_old.py  tutorial_1b.py  tutorial_1b_alt.py  tutorial_1b_odeint.py  tutorial_2.py  tutorial_3.py  tutorial_4.py  tutorial_4b.py  tutorial_5.py  tutorial_6.py  tutorial_7.py  tutorial_7b.py
npsolve/: __init__.py  basic.py  cache.py  core.py  functions.py  settings.py  soft_functions.py  solvers.py  utils.py
npsolve/legacy/: __init__.py  legacy_cache.py  legacy_core.py  legacy_solver.py  legacy_utils.py
old_examples/: __init__.py  tutorial_1.py  tutorial_1b.py  tutorial_2.py  tutorial_3.py  tutorial_4.py  tutorial_5.py  tutorial_6.py  tutorial_7.py  tutorial_7b.py
test/: __init__.py  test_basic.py  test_core.py  test_partial.py  test_performance.py  test_soft_functions.py  test_solver.py  test_utils.py
test/test_legacy/: test_partial.py  test_performance.py  test_solver.py
